--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script src="https://js.pusher.com/beams/1.0/push-notifications-cdn.js"></script>
-    <title>Mauji's Food - FoodGear</title>
+    <title>Mauji's Food - Foodlo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
